@@ -15,43 +15,32 @@
       <table align=left>
 
 	<tr><td><font size=-1>
-	   <a href="index.html">
-	    <b>Welcome</b></a><br>
+	   <a href="index.html"><b>Welcome</b></a><br>
 	  </font></td></tr>
 	<tr><td height=5></td></tr>
 
 	<tr><td bgcolor="%(caption_color)s"><b>Overview</b></td></tr>
 	<tr><td><font size=-1>
-	   <a href="pass/domains.html">
-	    <b>The Packages</b></a><br>
-	   <a href="pass/teams.html">
-	    <b>The Teams</b></a><br>
-	   <a href="whydisclaim.html">
-	    <b>The&nbsp;Disclaimer</b></a><br>
-	   <a href="robot.html">
-	    <b>The Robot</b></a><br>
+	   <a href="pass/domains.html"><b>The Packages</b></a><br>
+	   <a href="pass/teams.html"><b>The Teams</b></a><br>
+	   <a href="whydisclaim.html"><b>The&nbsp;Disclaimer</b></a><br>
+	   <a href="robot.html"><b>The Robot</b></a><br>
 	  </font></td></tr>
 	<tr><td height=5></td></tr>
 
 	<tr><td bgcolor="%(caption_color)s"><b>Info for...</b></td></tr>
 	<tr><td><font size=-1>
-	   <a href="maintainers.html">
-	    <b>Maintainers</b></a><br>
-	   <a href="leaders.html">
-	    <b>Coordinators</b></a><br>
-	   <a href="translators.html">
-	    <b>Translators</b></a><br>
+	   <a href="maintainers.html"><b>Maintainers</b></a><br>
+	   <a href="leaders.html"><b>Coordinators</b></a><br>
+	   <a href="translators.html"><b>Translators</b></a><br>
 	 </font></td></tr>
 	<tr><td height=5></td></tr>
 
 	<tr><td bgcolor="%(caption_color)s"><b>Documents</b></td></tr>
 	<tr><td><font size=-1>
-	   <a href="thanks.html">
-	    <b>Contributors</b></a><br>
-	   <a href="files.html">
-	    <b>File List</b></a><br>
-	   <a href="software.html">
-	    <b>Tools</b></a><br>
+	   <a href="thanks.html"><b>Contributors</b></a><br>
+	   <a href="files.html"><b>File List</b></a><br>
+	   <a href="software.html"><b>Tools</b></a><br>
 	 </font></td></tr>
 	<tr><td height=5></td></tr>
 
